--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,7 @@
 .prompt-input-area textarea {
     background-color: #ebebeb !important;
 }
+
+.error-dialog-message{
+    white-space: pre-wrap;                            
+}
