Change token size to 1000 (1M) Remove pivots logic
On branch feature/explore-single-prompt-1M
Changes to be committed:
	modified:   deployment/terraform/main.tf
	modified:   src/assets/style.css
	modified:   src/services/ConfigReader.ts
	modified:   src/services/ExploreService.ts
	modified:   src/services/PromptTemplateService.ts
	modified:   src/views/Explore.tsx
	modified:   src/views/Settings.tsx

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,5 @@
 .prompt-input-area textarea {
-    background-color: #ebebeb !important;
+    background-color: #ffffff !important;
 }
 
 .error-dialog-message{
